Fix swagger annotation
